fix(react-components): fix price range btn alignment
affects: @findify/react-components

--- a/packages/react-components/src/components/RangeFacet/styles.css
+++ b/packages/react-components/src/components/RangeFacet/styles.css
@@ -122,6 +122,7 @@ $height: 30px;
   line-height: $height;
   padding: 0 8px;
   cursor: pointer;
+  align-items: center;
   &:hover{
     text-decoration: underline;
   }
